Fix: animation coverFlow

--- a/src/styles/CoverFlow2.scss
+++ b/src/styles/CoverFlow2.scss
@@ -1,60 +1,49 @@
 .coverflow {
-  position: relative;
   width: 100vw;
-  overflow: hidden;
-  margin: 0 auto;
-  background-color: transparent; // Asegúrate de que el contenedor también tenga fondo transparente
-}
 
-.coverflow__wrapper {
-  display: flex;
-  height: 100vh;
-  justify-content: center;
-  align-items: center;
-  margin: auto;
-  width: fit-content;
+  .coverflow__wrapper {
+    display: flex;
+    height: 100svh;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    width: fit-content;
 
-  &.single-image {
+    .coverflow__item {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: calc(100vw / 3); // Ajustar el ancho para mostrar 3 imágenes
+      margin: 0 auto;
+
+      img {
+        width: 90%;
+        height: 100%;
+        min-height: 50svh;
+        object-fit: contain;
+        aspect-ratio: auto;
+      }
+
+      &.active {
+        animation: coverflowActive 2.8s forwards;
+      }
+
+      &:first-child {
+        animation: coverflowFirstChild 2.8s forwards;
+      }
+
+      &:last-child {
+        animation: coverflowLastchild 2.8s forwards;
+      }
+    }
+  }
+  .single-image {
     display: flex;
     align-items: center;
     justify-content: center;
     transform: none;
     margin: auto;
     max-width: calc(100vw);
-  }
-}
-
-.coverflow__item {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: calc(100vw / 3); // Ajustar el ancho para mostrar 3 imágenes
-  height: 100svh;
-  margin: 0 auto; // Ajusta según coverflowItemGap
-  background-color: transparent; // Asegúrate de que cada item también tenga fondo transparente
-
-  img {
-    max-width: 90%;
-    width: 100%;
-    height: 100%;
-    min-height: 50svh;
-    object-fit: contain;
-    aspect-ratio: auto;
-    background-color: transparent; // Asegúrate de que la imagen no tenga un fondo blanco
-    border: none; // Opcional: elimina bordes si los hay
-    mix-blend-mode: darken;
-  }
-
-  &.active {
-    animation: coverflowActive 2.8s forwards; // Cambia a la nueva animación
-  }
-
-  &:first-child {
-    animation: coverflowInactive 2.8s forwards; // Cambia a la nueva animación
-  }
-
-  &:last-child {
-    animation: coverflowLastchild 2.8s forwards; // Cambia a la nueva animación
   }
 }
 
@@ -74,25 +63,25 @@
 
 @keyframes coverflowActive {
   0% {
-    transform: scale(0.8) translateX(40%); // Mueve la imagen hacia la derecha y reduce su tamaño
+    transform: scale(0.8) translateX(40%);
   }
   50% {
-    transform: scale(1.2) translateX(0%); // Mueve la imagen al frente y a la posición original
+    transform: scale(1.2) translateX(0%);
   }
   100% {
-    transform: scale(0.7) translateX(-110%); // Trae la imagen al frente y a la posición original
+    transform: scale(0.8) translateX(-109.3%);
   }
 }
 
-@keyframes coverflowInactive {
+@keyframes coverflowFirstChild {
   0% {
-    transform: scale(0.8) translateX(40%); // Tamaño normal, en su posición original
+    transform: scale(0.9) translateX(29.3%);
   }
   50% {
-    transform: scale(0.8) translateX(0); // Reduce el tamaño y mueve hacia la izquierda
+    transform: scale(0.8) translateX(0);
   }
 
   100% {
-    transform: scale(0.8) translateX(-120%);
+    transform: scale(0.8) translateX(-250%);
   }
 }
